deploy: 8fa23b9127a4b5314dac2f6b4f0171cde08adc82

--- a/index.html
+++ b/index.html
@@ -455,6 +455,14 @@
                 </div>
               </dd>
             
+              <dt>Boba2 - Mandalorian - Aggression</dt>
+              <dd>
+                <div class="wa-flank:end">
+                  <a href="https://swudb.com/deck/TIXWTBAbV" target="_blank">https://swudb.com/deck/TIXWTBAbV</a>
+                  <wa-copy-button slot="icon" value="https://swudb.com/deck/TIXWTBAbV"></wa-copy-button>
+                </div>
+              </dd>
+            
           </dt>
         </div>
       </wa-details>
