--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
         
           <div class="wa-flank" style="--flank-size: 25ch;">
-            <a href="https://swudb.com/deck/TCUknyhyqy" target="_blank" class="wa-heading-s">Han2 - Vigilance (Force)</a>
+            <a href="https://swudb.com/deck/WbcyrPda" target="_blank" class="wa-heading-s">Han2 - Vigilance (Force)</a>
             <div class="wa-cluster">
               <wa-button href="https://swustats.net/TCGEngine/SWUDeck/DeckStats.php?gameName=51393" target="_blank" appearance="plain" variant="brand" size="small">Stats</wa-button>
               <wa-copy-button value="https://swustats.net/TCGEngine/NextTurn.php?gameName=51393&playerID=1&folderPath=SWUDeck" class="play-button wa-size-s" copy-label="Copy SWUStats Link">
